5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1785_3123.log
== SUBMITION (2019-05-30 11:17:29) 
-- CODE:
from numpy import *

v=array(eval(input("Digite vetor: ")))*1.0

n = size(v)
soma=0.0
i =0 w
while(i<n):
	soma += v[i]**-1

media = (soma/n)**-1

print(round(media,2))
-- EXECUTION TIME:
0.172864
-- ERROR:
  File "/home/codebench/codes/1785/3123/main.py", line 7
    i =0 w
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:17:35) 
-- CODE:
from numpy import *

v=array(eval(input("Digite vetor: ")))*1.0

n = size(v)
soma=0.0
i =0 w
while(i<n):
	soma += v[i]**-1

media = (soma/n)**-1

print(round(media,2))
-- ERROR:
File "XXXX", line 7
    i =0 w
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:17:44) 
-- CODE:
from numpy import *

v=array(eval(input("Digite vetor: ")))*1.0

n = size(v)
soma=0.0
i =0 
while(i<n):
	soma += v[i]**-1

media = (soma/n)**-1

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:18:12) 
-- CODE:
from numpy import *

v=array(eval(input("Digite vetor: ")))*1.0

n = size(v)
soma=0.0
i =0 
while(i<n):
	soma += v[i]**-1
   i+=1
media = (soma/n)**-1

print(round(media,2))
-- ERROR:
File "XXXX", line 10
    i+=1
       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:18:36) 
-- CODE:
from numpy import *

v=array(eval(input("Digite vetor: ")))*1.0

n = size(v)
soma=0.0
i =0 
while(i<n):
	soma += v[i]**-1
	i+=1
media = (soma/n)**-1

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:20:10) 
-- CODE:
from numpy import *

v=array(eval(input("Digite vetor: ")))*1.0

n = size(v)
soma=0.0
i =0 
while(i<n):
	soma += v[i]**-1
	i+=1
	
media = (soma/n)**-1

print(round(media,2))
-- EXECUTION TIME:
0.415562
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
3.95
---- user output:
3.95
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
2.69
---- user output:
2.69
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.33
---- user output:
2.33
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
